force-app/main/default/objects/ProcessSteps__mdt/ProcessSteps__mdt.object-meta.xml
<CustomObject>
    <description>Contains the steps for processes</description>
    <label>ProcessStep</label>
    <pluralLabel>ProcessSteps</pluralLabel>
</CustomObject>