force-app/main/default/objects/ProcessSteps__mdt/fields/Process__c.field-meta.xml
<CustomField>
    <fullName>Process__c</fullName>
    <label>Process</label>
    <length>32</length>
    <type>Text</type>
</CustomField>