force-app/main/default/objects/ProcessSteps__mdt/fields/Step_Name__c.field-meta.xml
<CustomField>
    <fullName>Step_Name__c</fullName>
    <label>Step Name</label>
    <length>32</length>
    <type>Text</type>
</CustomField>